--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <h1>i am JAYANT bANSAL</h1><br>
         <h3><a href="https://github.com/jayantbansal21">Github</a></h3>
         <h3><a href="https://www.linkedin.com/in/jayantbansal21/">linkedin</a></h3>
-</body>
+        <br><br>
+        <h4><a href="https://jayantbansal21.github.io/portfolio/">Another portfolio</a></h4>
+    </body>
 </html>
         
         
