--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-        <h2>HEY THERE</h2>
-        <h1>I AM JAYANT BANSALL</h1>
+    <div class="head">
+        <h1>Hi,</h1>
+        <h1>I am Jayant Bansal</h1>
+        <h2>Undergraduate CS student with an interest in app development</h2>
+    </div>
         <div class="links">
-            <h3><a href="https://github.com/jayantbansal21"><img src="github.png" height="30px" width="30px"></a></h3>
-            <h3><a href="https://twitter.com/jayantbansal21"><img src="twitter.png" height="30px" width="30px"></a></h3>
-            <h3><a href="mailto:hi@jayantbansal.me"><img src="email.png" height="30px" width="30px"></a></h3>
-            <h3><a href="https://linkedin.com/in/jayantbansal21"><img src="linkedin.png" height="30px" width="30px"></a></h3>
+            <h3><a href="https://github.com/jayantbansal21"><img src="github.png" height="40px" width="40px"></a></h3>
+            <h3><a href="https://twitter.com/jayantbansal21"><img src="twitter.png" height="40px" width="40px"></a></h3>
+            <h3><a href="mailto:hi@jayantbansal.me"><img src="email.png" height="40px" width="40px"></a></h3>
+            <h3><a href="https://linkedin.com/in/jayantbansal21"><img src="linkedin.png" height="40px" width="40px"></a></h3>
         </div>
     </body>
 </html>
