--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
         <div class="links">
             <h3><a href="https://github.com/jayantbansal21"><img src="github.png" height="40px" width="40px"></a></h3>
-            <h3><a href="https://twitter.com/jayantbansal21"><img src="twitter.png" height="40px" width="40px"></a></h3>
+            <h3><a href="https://twitter.com/CptJayant"><img src="twitter.png" height="40px" width="40px"></a></h3>
             <h3><a href="mailto:hi@jayantbansal.me"><img src="email.png" height="40px" width="40px"></a></h3>
             <h3><a href="https://linkedin.com/in/jayantbansal21"><img src="linkedin.png" height="40px" width="40px"></a></h3>
         </div>
