--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="head">
         <h1>Hi,</h1>
         <h1>I am Jayant Bansal</h1>
-        <h2>Undergraduate CS student, always in for learing new things </h2>
+        <h2>Undergraduate CS student, always in for learing new things. </h2>
         <!-- <h2>Feel free to share your knowledge</h2> -->
     </div>
         <div class="links">
